[gd_scene load_steps=18 format=3 uid="uid://cyfpo04sqtgap"]

[ext_resource type="Script" path="res://Resource/gdScript/MainScene.gd" id="1_7k46g"]
[ext_resource type="Texture2D" uid="uid://31m3ppt3kbdy" path="res://Resource/res/changjing/login_3.png" id="2_ht03o"]
[ext_resource type="Script" path="res://Resource/gdScript/LoginScreen.gd" id="2_skogn"]
[ext_resource type="Texture2D" uid="uid://cpwmlvqbuhqf1" path="res://Resource/res/UI/denglu/login_logo.png" id="3_4isp0"]
[ext_resource type="Texture2D" uid="uid://ctfd8py85xq7l" path="res://Resource/res/UI/denglu/new_0.png" id="4_6n1wu"]
[ext_resource type="Texture2D" uid="uid://tr80552genhe" path="res://Resource/res/UI/denglu/new_1.png" id="5_fytgq"]
[ext_resource type="Texture2D" uid="uid://c6etn2yjn7ysn" path="res://Resource/res/UI/denglu/new_3.png" id="6_e5olg"]
[ext_resource type="Texture2D" uid="uid://do6jgtgcwso6o" path="res://Resource/res/UI/denglu/new_2.png" id="7_t1she"]
[ext_resource type="Texture2D" uid="uid://cfksan32pon2p" path="res://Resource/res/UI/denglu/contnue_0.png" id="8_5jdue"]
[ext_resource type="Texture2D" uid="uid://d1nbe7rbqaa5k" path="res://Resource/res/UI/denglu/contnue_1.png" id="9_0xpds"]
[ext_resource type="Texture2D" uid="uid://d1mp6qg14jsg" path="res://Resource/res/UI/denglu/contnue_3.png" id="10_i3216"]
[ext_resource type="Texture2D" uid="uid://1krw5laueuht" path="res://Resource/res/UI/denglu/contnue_2.png" id="11_33yr6"]
[ext_resource type="Texture2D" uid="uid://c6h6e32n33ipn" path="res://Resource/res/UI/denglu/exit_0.png" id="12_58v0a"]
[ext_resource type="Texture2D" uid="uid://58cdrwdw8cwl" path="res://Resource/res/UI/denglu/exit_1.png" id="13_vxkrl"]
[ext_resource type="Texture2D" uid="uid://be4u45sw61tf1" path="res://Resource/res/UI/denglu/exit_3.png" id="14_ugq4r"]
[ext_resource type="Texture2D" uid="uid://bmpc1dfufvs5e" path="res://Resource/res/UI/denglu/exit_2.png" id="15_ase01"]
[ext_resource type="PackedScene" uid="uid://ctkoyawmm3vpj" path="res://Resource/tscn/DialogueSystem.tscn" id="17_xxxxx"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_7k46g")
metadata/_edit_horizontal_guides_ = [800.0]
metadata/_edit_vertical_guides_ = [360.0]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 800)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(720, 1600)
render_target_update_mode = 4

[node name="LoginScreen" type="Control" parent="SubViewportContainer"]
layout_mode = 2
script = ExtResource("2_skogn")

[node name="Background" type="TextureRect" parent="SubViewportContainer/LoginScreen"]
layout_mode = 0
offset_left = -208.0
offset_top = -361.0
offset_right = 970.0
offset_bottom = 1799.0
texture = ExtResource("2_ht03o")

[node name="Logo" type="TextureRect" parent="SubViewportContainer/LoginScreen"]
layout_mode = 1
offset_top = 223.0
offset_right = 689.0
offset_bottom = 631.0
texture = ExtResource("3_4isp0")

[node name="NewButton" type="TextureButton" parent="SubViewportContainer/LoginScreen"]
layout_mode = 0
offset_left = 102.0
offset_top = 1046.0
offset_right = 568.0
offset_bottom = 1173.0
texture_normal = ExtResource("4_6n1wu")
texture_pressed = ExtResource("5_fytgq")
texture_hover = ExtResource("6_e5olg")
texture_disabled = ExtResource("7_t1she")

[node name="ContinueButton" type="TextureButton" parent="SubViewportContainer/LoginScreen"]
layout_mode = 0
offset_left = 102.0
offset_top = 1187.0
offset_right = 568.0
offset_bottom = 1314.0
disabled = true
texture_normal = ExtResource("8_5jdue")
texture_pressed = ExtResource("9_0xpds")
texture_hover = ExtResource("10_i3216")
texture_disabled = ExtResource("11_33yr6")

[node name="ExitButton" type="TextureButton" parent="SubViewportContainer/LoginScreen"]
layout_mode = 0
offset_left = 102.0
offset_top = 1320.0
offset_right = 568.0
offset_bottom = 1447.0
texture_normal = ExtResource("12_58v0a")
texture_pressed = ExtResource("13_vxkrl")
texture_hover = ExtResource("14_ugq4r")
texture_disabled = ExtResource("15_ase01")

[node name="DialogueSystem" parent="SubViewportContainer" instance=ExtResource("17_xxxxx")]
visible = false
